--- a/frontend/src/app/shared/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/sidebar/sidebar.component.html
@@ -26,8 +26,7 @@
       </div>
       
       <ul *ngIf="item.children?.length && isExpanded(item.route)" 
-          class="submenu" 
-          [@slideDown]>
+          class="submenu">
         <li *ngFor="let child of item.children" class="submenu-item">
           <a [routerLink]="child.route" 
              routerLinkActive="active"
