Fix user list component loading

--- a/frontend/src/app/features/user/user-form/user-form.component.html
+++ b/frontend/src/app/features/user/user-form/user-form.component.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="form-group">
-          <label for="phone">Số Điện Thoại *</label>
+          <label for="phone">Số Điện Thoại</label>
           <input 
             type="tel" 
             id="phone" 
